--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,16 @@ dist.jar=${dist.dir}/OpenCVDemos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.core-3.2.1.jar=lib\\core-3.2.1.jar
+file.reference.javase-3.2.1.jar=lib\\javase-3.2.1.jar
+file.reference.jcommander-1.48.jar=lib\\jcommander-1.48.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.OpenCV3.0.classpath}
+    ${libs.OpenCV3.0.classpath}:\
+    ${file.reference.core-3.2.1.jar}:\
+    ${file.reference.javase-3.2.1.jar}:\
+    ${file.reference.jcommander-1.48.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=opencvdemos.BallGame
+main.class=opencvdemos.RoundelCardboardDetection
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
